--- a/index.html
+++ b/index.html
@@ -5,21 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-
-        /* 여백 초기화 */
-body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr, textarea, button, form {margin: 0; padding: 0;}
-        /*가운데 영역*/
-.container {max-width: 1200px; width: 1200px; height: 1000px; margin: 0 auto; background-color: royalblue; z-index: 2;}
-
-/*레이아웃*/
-#wrap {position: relative; background: #efecea; }
-#section1 {height:130vh; background-color: blanchedalmond;}
-#section2 {padding: 20% 0 15% 0; background-color: blue;}
-#section3 {background: red; padding: 12% 0;}
-#section4 {padding: 15% 0;  background-color: brown;}
-#section5 {background: #fff; padding: 15% 0 20% 0; }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div id="wrap">
@@ -27,10 +13,40 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
             <header>
                 <h1>Kang Yeon Jae Portfolio</h1>
             </header>
-            <div class="container"></div>
+            <div class="container">
+                <div class="sec1">
+                    <div class="sec1_cont">
+                        <div class="sec1_text">
+                            <h3>도전은 그 자체로 아름다운것 입니다.</h3>
+                            <p>Those who have a definite purpose and a clear course of life go forward even on the most difficult roads, those who have no purpose does not go forward even on the s moothest roads.</p>
+                        </div>
+                        <div class="sec_img"><img src="img/sec1_img.png"></div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="section2">
-            <div class="container"></div>
+            <div class="container">
+                <div class="sec2">
+                    <div class="sec2_img"><img src="img/sec_img1.jpg"></div>
+                    <div class="sec2_text">
+                        <h2>Acquisition ability</h2>
+                        <h3>Web Design + Web Publisher</h3>
+                    </div>
+                    <div class="sec2_study">
+                        <div class="wd">
+                            <ul>
+                                <li>HTMl</li>
+                                <li>CSS</li>
+                                <li>JavaScripts</li>
+                                <li>Jquery</li>
+                                <li>PhotoShop</li>
+                                <li>Illustrator</li>
+                            </ul>
+                    </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="section3">
             <div class="container"></div>
