--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <div class="container">
                 <div class="sec1">
                     <div class="sec1_cont">
-                        <div class="sec1_text">
-                            <h3>도전은 그 자체로 아름다운것 입니다.</h3>
+                        <div class="sec1_txt">
+                            <h3>Let's not compromise with myself in any difficult matter.</h3>
                             <p>Those who have a definite purpose and a clear course of life go forward even on the most difficult roads, those who have no purpose does not go forward even on the s moothest roads.</p>
                         </div>
-                        <div class="sec_img"><img src="img/sec1_img.png"></div>
+                        <div class="sec1_img"><img src="img/sec1_img.png"></div>
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="sec2">
                     <div class="sec2_img"><img src="img/sec_img1.jpg"></div>
-                    <div class="sec2_text">
+                    <div class="sec2_txt">
                         <h2>Acquisition ability</h2>
                         <h3>Web Design + Web Publisher</h3>
                     </div>
@@ -49,7 +49,79 @@
             </div>
         </section>
         <section id="section3">
-            <div class="container"></div>
+            <div class="container">
+                <div class="sec3">
+                    <h2>
+                        <span>Create project</span>
+                    </h2>
+                    <div class="sec3_moc">
+                        <div class="mockup">
+                            <div class="sec3_tit">
+                                <h3 class="titAni white">
+                                    비비고 Site
+                                </h3>
+                            </div>
+                            <div class="sec3_img">
+                                <img src="img/sec3_img2.jpg">
+                            </div>
+                            <div class="desc">
+                                <a href="#" target="_blank">
+                                    스탠다드 웹 사이트 입니다.
+                                    <span>Read More</span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="mockup">
+                            <div class="sec3_tit">
+                                <h3 class="titAni white">
+                                    도서관 Site
+                                </h3>
+                            </div>
+                            <div class="sec3_img">
+                                <img src="img/sec3_img3.jpg">
+                            </div>
+                            <div class="desc">
+                                <a href="#" target="_blank">
+                                    반응형 웹 사이트 입니다.
+                                    <span>Read More</span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="mockup">
+                            <div class="sec3_tit">
+                                <h3 class="titAni white">
+                                    스타워즈 Site
+                                </h3>
+                            </div>
+                            <div class="sec3_img">
+                                <img src="img/sec3_img4.jpg">
+                            </div>
+                            <div class="desc">
+                                <a href="#" target="_blank">
+                                    반응형 웹 사이트 입니다.
+                                    <span>Read More</span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="mockup">
+                            <div class="sec3_tit">
+                                <h3 class="titAni white">
+                                    인터파크 Site
+                                </h3>
+                            </div>
+                            <div class="sec3_img">
+                                <img src="img/sec3_img5.jpg">
+                            </div>
+                            <div class="desc">
+                                <a href="#" target="_blank">
+                                    ajax 작업 웹 사이트 입니다.
+                                    <span>Read More</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="section4">
             <div class="container"></div>
