--- a/index.html
+++ b/index.html
@@ -57,39 +57,7 @@
                     <div class="sec3_moc">
                         <div class="mockup">
                             <div class="sec3_tit">
-                                <h3 class="titAni white">
-                                    비비고 Site
-                                </h3>
-                            </div>
-                            <div class="sec3_img">
-                                <img src="img/sec3_img2.jpg">
-                            </div>
-                            <div class="desc">
-                                <a href="#" target="_blank">
-                                    스탠다드 웹 사이트 입니다.
-                                    <span>Read More</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="mockup">
-                            <div class="sec3_tit">
-                                <h3 class="titAni white">
-                                    도서관 Site
-                                </h3>
-                            </div>
-                            <div class="sec3_img">
-                                <img src="img/sec3_img3.jpg">
-                            </div>
-                            <div class="desc">
-                                <a href="#" target="_blank">
-                                    반응형 웹 사이트 입니다.
-                                    <span>Read More</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="mockup">
-                            <div class="sec3_tit">
-                                <h3 class="titAni white">
+                                <h3 class="titAni White">
                                     스타워즈 Site
                                 </h3>
                             </div>
@@ -103,9 +71,10 @@
                                 </a>
                             </div>
                         </div>
+
                         <div class="mockup">
                             <div class="sec3_tit">
-                                <h3 class="titAni white">
+                                <h3 class="titAni White">
                                     인터파크 Site
                                 </h3>
                             </div>
@@ -119,12 +88,51 @@
                                 </a>
                             </div>
                         </div>
+
+                        <div class="mockup">
+                            <div class="sec3_tit">
+                                <h3 class="titAni White">
+                                    비비고 Site
+                                </h3>
+                            </div>
+                            <div class="sec3_img">
+                                <img src="img/sec3_img2.jpg">
+                            </div>
+                            <div class="desc">
+                                <a href="#" target="_blank">
+                                    스탠다드 웹 사이트 입니다.
+                                    <span>Read More</span>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="mockup">
+                            <div class="sec3_tit">
+                                <h3 class="titAni White">
+                                    도서관 Site
+                                </h3>
+                            </div>
+                            <div class="sec3_img">
+                                <img src="img/sec3_img3.jpg">
+                            </div>
+                            <div class="desc">
+                                <a href="#" target="_blank">
+                                    반응형 웹 사이트 입니다.
+                                    <span>Read More</span>
+                                </a>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
         </section>
         <section id="section4">
-            <div class="container"></div>
+            <div class="container">
+                <div class="sec4">
+                    <div
+                </div>
+            </div>
         </section>
         <section id="section5">
             <div class="container"></div>
