--- a/index.html
+++ b/index.html
@@ -130,7 +130,30 @@
         <section id="section4">
             <div class="container">
                 <div class="sec4">
-                    <div
+                    <div class="sec4_img">
+                        <img src="img/sec4_img1.jpg" alt="이미지10">
+                    </div>
+                    <div class="sec4_txt">
+                        <h2>웹퍼블리셔 구현능력</h2>
+                        <h3>"</h3>
+                        <p>Those who have a definite purpose and a clear course of life go forward even on the most difficult roads, those who have no purpose does not go forward even on the s moothest roads</p>
+                    </div>
+                    <div class="sec4_skill">
+                        <div class="sl">
+                            <ul>
+                                <li>PHOTOSHOP <span>60%</span></li>
+                                <li>ILLUSTRATOR <span>60%</span></li>
+                            </ul>
+                        </div>
+                        <div class="sr">
+                                <ul>
+                                    <li>HTML <span>85%</span></li>
+                                    <li>CSS <span>85%</span></li>
+                                    <li>JQUERY <span>70%</span></li>
+                                    <li>JAVASCRIPT <span>50%</span></li>
+                                </ul>
+                        </div>                        
+                    </div>
                 </div>
             </div>
         </section>
