--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/rest.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <div id="wrap">
@@ -17,7 +20,7 @@
                 <div class="sec1">
                     <div class="sec1_cont">
                         <div class="sec1_txt">
-                            <h3>Let's not compromise with myself in any difficult matter.</h3>
+                            <h3>안녕하세요 저는 강연재 입니다.</h3>
                             <p>Those who have a definite purpose and a clear course of life go forward even on the most difficult roads, those who have no purpose does not go forward even on the s moothest roads.</p>
                         </div>
                         <div class="sec1_img"><img src="img/sec1_img.png"></div>
@@ -25,30 +28,49 @@
                 </div>
             </div>
         </section>
-        <section id="section2">
+        <section id="section2" class="show">
             <div class="container">
                 <div class="sec2">
                     <div class="sec2_img"><img src="img/sec_img1.jpg"></div>
                     <div class="sec2_txt">
-                        <h2>Acquisition ability</h2>
-                        <h3>Web Design + Web Publisher</h3>
+                        <h2>About Me</h2>
+                        <h3>Web Publisher</h3>
                     </div>
                     <div class="sec2_study">
                         <div class="wd">
                             <ul>
-                                <li>HTMl</li>
-                                <li>CSS</li>
-                                <li>JavaScripts</li>
-                                <li>Jquery</li>
-                                <li>PhotoShop</li>
-                                <li>Illustrator</li>
+                                <li>
+                                    <span class="material-icons">
+                                    navigate_next
+                                    </span>
+                                    이름: 강연재</li>
+                                <li>
+                                    <span class="material-icons">
+                                        navigate_next
+                                        </span>
+                                        이메일: kang1670@gmail.com</li>
+                                <li>
+                                    <span class="material-icons">
+                                        navigate_next
+                                        </span>
+                                        안산대학교 컴퓨터정보과 졸업</li>
+                                <li>
+                                    <span class="material-icons">
+                                        navigate_next
+                                        </span>
+                                        학습과정: 라인아트컴퓨터학원 UIUX반응형 과정 수료</li>
+                                <li>
+                                    <span class="material-icons">
+                                        navigate_next
+                                        </span>
+                                    학습기간: 2021.09.27 ~ 2022.02.22</li>
                             </ul>
                     </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="section3">
+        <section id="section3" class="show">
             <div class="container">
                 <div class="sec3">
                     <h2>
@@ -67,8 +89,15 @@
                             <div class="desc">
                                 <a href="#" target="_blank">
                                     반응형 웹 사이트 입니다.
-                                    <span>Read More</span>
+                                    <span>View</span>
                                 </a>
+                            </div>
+                            <div class="info">
+                                <p>
+                                    미국을 대표하는 SF 스타워즈를 주제로 만든 반응형 웹사이트 입니다.
+                                    사용된 것은 html, css, JAVASCRIPT, jquery 가 있고
+                                    display:flex를 이용하여 갤러리를 만들었고 jquery를 이용하여 햄버거 메뉴 및 슬라이드를 만들었습니다.
+                                </p>
                             </div>
                         </div>
 
@@ -84,7 +113,7 @@
                             <div class="desc">
                                 <a href="#" target="_blank">
                                     ajax 작업 웹 사이트 입니다.
-                                    <span>Read More</span>
+                                    <span>View</span>
                                 </a>
                             </div>
                         </div>
@@ -101,7 +130,7 @@
                             <div class="desc">
                                 <a href="#" target="_blank">
                                     스탠다드 웹 사이트 입니다.
-                                    <span>Read More</span>
+                                    <span>View</span>
                                 </a>
                             </div>
                         </div>
@@ -118,7 +147,7 @@
                             <div class="desc">
                                 <a href="#" target="_blank">
                                     반응형 웹 사이트 입니다.
-                                    <span>Read More</span>
+                                    <span>View</span>
                                 </a>
                             </div>
                         </div>
@@ -160,7 +189,7 @@
                 <div id="section6">
                     <div class="container">
                         <div class="sec6">
-                            <h2>Let’s work together.</h2>
+                            <h2>Thanks For Waching.</h2>
                             <p>Copyright 2022. 강연재 All right reserved.</p>
                         </div>
                     </div>
