--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/rest.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pinyon+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inria+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sulphur+Point:300,400,700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
@@ -94,9 +98,59 @@
                             </div>
                             <div class="info">
                                 <p>
-                                    미국을 대표하는 SF 스타워즈를 주제로 만든 반응형 웹사이트 입니다.
-                                    사용된 것은 html, css, JAVASCRIPT, jquery 가 있고
-                                    display:flex를 이용하여 갤러리를 만들었고 jquery를 이용하여 햄버거 메뉴 및 슬라이드를 만들었습니다.
+                                    미국을 대표하는 SF 스타워즈를 주제로 만든 반응형 웹사이트 입니다.<br />
+                                    사용된 것은 HTML, CSS, JAVASCRIPT, JQUERY 가 있고
+                                    display:flex를 이용하여 갤러리를 만들었고 jquery를 이용하여 햄버거 메뉴 및 슬라이드를 만들었습니다.<br />
+                                    컬러는 블랙, 화이트 조합으로 만들었습니다. 
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="mockup">
+                            <div class="sec3_tit">
+                                <h3 class="titAni White">
+                                    도서관 Site
+                                </h3>
+                            </div>
+                            <div class="sec3_img">
+                                <img src="img/sec3_img3.jpg">
+                            </div>
+                            <div class="desc">
+                                <a href="#" target="_blank">
+                                    반응형 웹 사이트 입니다.
+                                    <span>View</span>
+                                </a>
+                            </div>
+                            <div class="info">
+                                <p>
+                                    안산시 감골도서관을 주제로 만든 반응형 웹사이트 입니다.
+                                    HTML, CSS, JAVASCRIPT, JQUERY로 만들었으며 슬라이드 기능을 넣어 만들었습니다.
+                                    컬러는 녹색을 포인트로 주며 도서관의 이미지를 이용하여 만들었습니다.
+                                </p>
+                            </div>
+                        </div>
+
+                        
+
+                        <div class="mockup">
+                            <div class="sec3_tit">
+                                <h3 class="titAni White">
+                                    비비고 Site
+                                </h3>
+                            </div>
+                            <div class="sec3_img">
+                                <img src="img/sec3_img2.jpg">
+                            </div>
+                            <div class="desc">
+                                <a href="#" target="_blank">
+                                    스탠다드 웹 사이트 입니다.
+                                    <span>View</span>
+                                </a>
+                            </div>
+                            <div class="info">
+                                <p>
+                                    비비고를 주제로 만든 기본 웹사이트 입니다.
+                                    HTML, CSS 만으로 만들었으며 컬러는 비비고의 로고 컬러를 이용하여 만들었습니다.
                                 </p>
                             </div>
                         </div>
@@ -116,39 +170,13 @@
                                     <span>View</span>
                                 </a>
                             </div>
-                        </div>
+                            <div class="info">
+                                <p>
+                                    인터파크의 도서 판매 사이트를 주제로 만든 사이트 입니다.<br />
+                                    실제 인터파크 사이트와 유사하게 만들었으며 사용된 것은 HTML, CSS, JAVASCRIPT, JQUERY 가 있고 슬라이드 와 메뉴를 넣었습니다.
+                                    ajax의 기능을 이용하여 카카오 서버에 있는 책 데이터를 가져와 적용하였습니다.<br />
 
-                        <div class="mockup">
-                            <div class="sec3_tit">
-                                <h3 class="titAni White">
-                                    비비고 Site
-                                </h3>
-                            </div>
-                            <div class="sec3_img">
-                                <img src="img/sec3_img2.jpg">
-                            </div>
-                            <div class="desc">
-                                <a href="#" target="_blank">
-                                    스탠다드 웹 사이트 입니다.
-                                    <span>View</span>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="mockup">
-                            <div class="sec3_tit">
-                                <h3 class="titAni White">
-                                    도서관 Site
-                                </h3>
-                            </div>
-                            <div class="sec3_img">
-                                <img src="img/sec3_img3.jpg">
-                            </div>
-                            <div class="desc">
-                                <a href="#" target="_blank">
-                                    반응형 웹 사이트 입니다.
-                                    <span>View</span>
-                                </a>
+                                </p>
                             </div>
                         </div>
                         
@@ -156,7 +184,7 @@
                 </div>
             </div>
         </section>
-        <section id="section4">
+        <section id="section4" class="show">
             <div class="container">
                 <div class="sec4">
                     <div class="sec4_img">
@@ -186,9 +214,9 @@
                 </div>
             </div>
         </section>
-                <div id="section6">
+                <div id="section5">
                     <div class="container">
-                        <div class="sec6">
+                        <div class="sec5">
                             <h2>Thanks For Waching.</h2>
                             <p>Copyright 2022. 강연재 All right reserved.</p>
                         </div>
