--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <img src="img/sec3_img4.jpg">
                             </div>
                             <div class="desc">
-                                <a href="#" target="_blank">
+                                <a href="https://kang206.github.io/star_poto3/" target="_blank">
                                     반응형 웹 사이트 입니다.
                                     <span>View</span>
                                 </a>
@@ -112,7 +112,7 @@
                                 <img src="img/sec3_img3.jpg">
                             </div>
                             <div class="desc">
-                                <a href="#" target="_blank">
+                                <a href="https://kang206.github.io/poto2/" target="_blank">
                                     반응형 웹 사이트 입니다.
                                     <span>View</span>
                                 </a>
@@ -138,7 +138,7 @@
                                 <img src="img/sec3_img2.jpg">
                             </div>
                             <div class="desc">
-                                <a href="#" target="_blank">
+                                <a href="https://kang206.github.io/html_todo/" target="_blank">
                                     스탠다드 웹 사이트 입니다.
                                     <span>View</span>
                                 </a>
@@ -161,7 +161,7 @@
                                 <img src="img/sec3_img5.jpg">
                             </div>
                             <div class="desc">
-                                <a href="#" target="_blank">
+                                <a href="https://kang206.github.io/book_k/ " target="_blank">
                                     ajax 작업 웹 사이트 입니다.
                                     <span>View</span>
                                 </a>
